# scale-codec-comparator

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  makefile
.github/: dependabot.yml
.github/workflows/: as-scale-codec.yml  cScale.yml  go-substrate-rpc-client.yml  scale-codec-cpp.yml  scale-codec-js-library.yml  scale-go.yml  scale-js.yml  scale-php.yml  scale-python.yml  scale-ruby.yml  scale-ts.yml
as-scale-codec/: README.md  package-lock.json  package.json
as-scale-codec-wasm/: .gitignore  as-pect.config.js  package.json  readme.md
as-scale-codec-wasm/assembly/: index.ts
as-scale-codec-wasm/tests/: index.spec.ts
as-scale-codec/test/: base.spec.ts
cScale/: .gitignore  .gitsubmodules  CMakeLists.txt  README.md  mainapp.c
cScale/cScale/: CMakeLists.txt  Makefile
go-substrate-rpc-client/: README.md  codec.go  codec_test.go  go.mod  go.sum
hs-web3/: README.md  hs-web3.cabal  package.yaml  stack.yaml
hs-web3/test/: Spec.hs
php-scale-codec/: Makefile  README.md  composer.json  phpunit.xml.dist
polkadot-js/: README.md  jest.config.js  package-lock.json  package.json
polkadot-js/test/: base.spec.ts
py-scale-codec/: README.md  requirements.txt  setup.py
py-scale-codec/scale-codec-comparator/: codec.py
scale-codec-cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
scale-codec-js-library/: README.md  package-lock.json  package.json
scale-ts/: README.md  package-lock.json  package.json
scale.go/: README.md  codec.go  codec_test.go  go.mod  go.sum
scale.rb/: Gemfile  Makefile  README.md
src/: lib.rs  scale_ffi.h
substrate-client-java/: settings.gradle
(+11 files in other folders)
